fix view on mobile devices

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 
 li {
    background: aliceblue;
-   width: 60%;
+   width: 80%;
    height: 400px;
    border-radius: 1.5rem;
    margin: 2rem 0;
